--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OneHundredMotels</title>
+  <title>
+  	<% if content_for?(:title) %>
+  		<%= yield(:title) %>
+  	<% else %>
+  		100 Motels
+  	<% end %>
+  </title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
