--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @event do |f| %>
+	<%= f.error_messages %>
 	<%= f.label :artist, "Artist" %>
 	<%= f.text_field :artist %>  
 	<%= f.submit "Create Event", :disable_with => 'Creating...' %>
