--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,3 @@
 <h1> <% title(@event.artist, "Events") %></h1>
 <p><%= @event.artist %></p>
+<p><%= link_to "Event Details", edit_event_path(@event) %></p>
