--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,5 @@
 <h1> <% title(@event.artist, "Events") %></h1>
 <p><%= @event.artist %></p>
 <p><%= link_to "Edit Event", edit_event_path(@event) %></p>
+<p><%= link_to "Delete Event", @event, :method => :delete,
+:confirm => "Are you sure you want to delete this event?" %></p>
