--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+<nav>
+  <%= link_to "Sign up", new_user_registration_path %>
+</nav>
 <body>
 <% flash.each do |key, value| %>
 	<div class='flash' id='<%= key %>'>
