Signup scenario with confirmable now working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   <%= csrf_meta_tags %>
 </head>
 <nav>
-  <%= link_to "Sign up", new_user_registration_path %>
+  <% if user_signed_in? %>
+    Signed in as <%= current_user.email %>
+  <% else %>
+    <%= link_to "Sign up", new_user_registration_path %>
+  <% end %>
 </nav>
 <body>
 <% flash.each do |key, value| %>
