--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to 100 Motels!</h1>
+
+<%= link_to "Events Index", events_path %>
+<%#= link_to "Users Index", users_path %>
+
+
