--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,8 @@
   <% admins_only do %>
     <%= link_to "Admin", admin_root_path %><br>
   <% end %>
-
+  <%= link_to "Events Index", events_path %>
+  <%= link_to "Users Index", admin_users_path %>
 </nav>
 <body>
 <% flash.each do |key, value| %>
