viewing event scenario passed venue step, date failing due to formatting

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,7 @@
 <h1> <% title(@event.artist, "Events") %></h1>
 <p><%= @event.artist %></p>
+<p>Venue - <%= @event.venue %></p>
+<p>Date - <%= @event.date %></p>
 
 <% admins_only do %>
 <p><%= link_to "Edit Event", edit_event_path(@event) %></p>
