--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,5 +2,11 @@
 	<%= f.error_messages %>
 	<%= f.label :artist, "Artist" %>
 	<%= f.text_field :artist %>  
+	<%= f.label :venue, "Venue" %>
+	<%= f.text_field :venue %>  
+	<%= f.label :date, "Date" %>
+	<%= f.text_field :date %>  
+	<%= f.label :ticket_price, "Ticket Price" %>
+	<%= f.text_field :ticket_price %>  
 	<%= f.submit %>
 <% end %>
