driving out line times controller

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to 100 Motels!</h1>
 
-<% @event.each do |event| %>
+<% @events.each do |event| %>
 <%= event.artist %>
 <%= event.venue %>
 <%= event.date %>
