--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to 100 Motels!</h1>
 
-<% @events.each do |event| %>
+<%= for event in @events do %>
 <%= event.artist %>
 <%= event.venue %>
 <%= event.date %>
