--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,3 @@
 <h2>Your Tickets</h2>
-<ul>
-	<% @cart.line_items.each do |item| %>
-		<li><%= item.event.artist %></li>
-		<li><%= item.quantity %></li>
-		<li><%= number_to_currency(@cart.total_price) %></li>
-	<% end %>
-</ul>
-<%= button_to "Empty Cart", @cart, method: :delete %>
+
+<%= render 'cart' %>
