--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,15 @@
 <h1>Welcome to 100 Motels!</h1>
 
-<%= for event in @events do %>
+<div><%= render @cart %></div>
+
+<div><%= for event in @events do %>
 <%= event.artist %>
 <%= event.venue %>
 <%= event.date %>
 <%= event.ticket_price %>
 <%= button_to "Add to Cart", line_items_path(event_id: event) %>
 <% end %>
+</div>
 
 
 
