--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -5,4 +5,5 @@
 		<li><%= number_to_currency(@cart.total_price) %></li>
 	<% end %>
 </ul>
+<%= button_to "Checkout", new_order_path, method: :get %>
 <%= button_to "Empty Cart", @cart, method: :delete %>
