first cart scenario passing

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>100 Motels, A Place for Anarchy</h1>
 
-<div><%= render @cart %></div>
+<div id="cart"><%= render @cart %></div>
 
 <div id="events-preview">
 	<ul>
