--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div id="cart"><%= render @cart %></div>
 
-<div id="events-preview">
+<div id="events">
 	<ul>
 		<% @events.each do |event| %>
 		  <li class="title"><%= event.artist %></li>
