--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,4 +1,4 @@
-<div class="cart_title"><%= t('.title') %></div>
+<div class="cart_title"><%#= t('.title') %></div>
 
 <table>
   <%= render(cart.line_items) %>
@@ -10,6 +10,6 @@
 
 </table>
 
-<%= button_to t('.checkout'), new_order_path, method: :get %>
-<%= button_to t('.empty'), cart, method: :delete, data: { confirm: 'Are you sure?' }
+<%= button_to "Checkout", new_order_path, method: :get %>
+<%= button_to "Empty", cart, method: :delete, data: { confirm: 'Are you sure?' }
      %>
