--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -11,5 +11,5 @@
 </table>
 
 <%= button_to "Checkout", new_order_path, method: :get %>
-<%= button_to "Empty", cart, method: :delete, data: { confirm: 'Are you sure?' }
+<%= button_to "Empty cart", cart, method: :delete, data: { confirm: 'Are you sure?' }
      %>
