good bit of checkout feature passing now

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -5,5 +5,5 @@
   <%= f.text_field :name %>
   <%= f.label :email, "Email" %>
   <%= f.email_field :email %>
-  <%= f.submit "Submit Order", :disable_with => 'Submit Ordering...' %>
+  <%= f.submit "Place Order", :disable_with => 'Submit Ordering...' %>
 <% end %>
