--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,7 +1,19 @@
-<h1>Here are the details of your order</h1>
+<h1>Thanks <%= @order.name %>! Here is your Order...</h1>
 
-<%= @order.name %>
-<%= @order.email %>
-<% @order.line_items.each do |l| %>
-	<%= l.event.artist %>
-<% end %>
+
+<table id="order-details">
+	<tr>
+		<% @order.line_items.each do |l| %>
+		<th>name</th>
+		<th>email</th>
+		<th>item</th>
+		<th>quantity</th>
+	</tr>
+	<tr>
+		<td><%= @order.name %></td>
+		<td><%= @order.email %></td>
+		<td><%= l.event.artist %></td>
+		<td><%= l.quantity %></td>
+	</tr>
+	<% end %>
+</table>
