--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,23 +2,71 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.container {
-	padding: 20px;
-	margin: 20px;
-	background-color: hsla(2, 100%, 68%, 1);
-	background-image:-webkit-gradient(linear, 0% 100%, 100% 9%,
-	 from(#666666), to(#666666), color-stop(.6,#FF1F1F));
-	width: 940px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	box-shadow: 4px 4px 5px #282b1f;
+@import url(http://fonts.googleapis.com/css?family=Racing+Sans+One);
+
+.container {}
+
+/*seems to no work with rails helpers
+ but does with ordinary markup*/
+	a:hover	{
+		-webkit-transform: scale(1.5);
+		-moz-transform: scale(1.5);
+		transform: scale(1.5);
 }
 
-.placehold-image {opacity: .5}
-
-/*not working why?*/
-.linky-hover a:hover {
-	-webkit-transform: scale (1.5);
-	transform: scale(1.5);
+#stroke	{
+	float: left;
+	width: 230px;
+	height: 152px;
+	background: image-url('CB-stroke.png') no-repeat;
+	opacity: .65;
 }
+
+#stroke:hover	{
+	opacity: 1;
+}
+
+#logo	{
+	float: right;
+	width: 230px;
+	height: 152px;
+	background: image-url('logo-cart.png') no-repeat;
+}
+
+#primary	{
+	width: 100%;
+	height: 50px;
+	background-color: #fafaf6;
+	margin: 15px;
+	padding: 15px;
+	-webkit-box-shadow: 0px 1px 2px #ccc;
+	-moz-box-shadow: 0px 1px 2px #ccc;
+	box-shadow: 0px 1px 2px #ccc;
+	font: bold 13px "Racing Sans One", Verdana;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+
+	ul li {
+		display: inline;
+		padding-left: 43px;
+
+		a {
+			color: #64645d;
+			padding: 5px 15px;
+			text-shadow: 1px 1px 1px #fff;
+			-webkit-border-radius: 5px;
+			-moz-border-radius: 5px;
+			border-radius: 5px;
+			-webkit-transition: all .3s ease-in-out;
+			-moz-transition: all .3s ease-in-out;
+			-o-transition: all .3s ease-in-out;
+			transition: all .3s ease-in-out;
+		}
+
+		a:hover {
+			color: #dc692e;
+			background: #efefe9;
+		}
+	}
+}
+
