--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,71 +2,31 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@import url(http://fonts.googleapis.com/css?family=Racing+Sans+One);
+/* Home */
 
-.container {}
-
-/*seems to no work with rails helpers
- but does with ordinary markup*/
-	a:hover	{
-		-webkit-transform: scale(1.5);
-		-moz-transform: scale(1.5);
-		transform: scale(1.5);
-}
-
-#stroke	{
-	float: left;
-	width: 230px;
-	height: 152px;
-	background: image-url('CB-stroke.png') no-repeat;
-	opacity: .65;
-}
-
-#stroke:hover	{
-	opacity: 1;
-}
-
-#logo	{
-	float: right;
-	width: 230px;
-	height: 152px;
-	background: image-url('logo-cart.png') no-repeat;
-}
-
-#primary	{
+#home-container	{
 	width: 100%;
-	height: 50px;
-	background-color: #fafaf6;
-	margin: 15px;
-	padding: 15px;
+
+	ul li {
+		font: normal 35px;
+		color: #787871;
+		position: relative;
+		margin-bottom: 15px;
+		letter-spacing: 1px;
+	}
+}
+
+.placehold-image {
+	background: image-url('http://placehold.it/100x100') no-repeat;
+	float: left;
+	border: 15px solid #fafaf6;
 	-webkit-box-shadow: 0px 1px 2px #ccc;
 	-moz-box-shadow: 0px 1px 2px #ccc;
 	box-shadow: 0px 1px 2px #ccc;
-	font: bold 13px "Racing Sans One", Verdana;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-
-	ul li {
-		display: inline;
-		padding-left: 43px;
-
-		a {
-			color: #64645d;
-			padding: 5px 15px;
-			text-shadow: 1px 1px 1px #fff;
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			border-radius: 5px;
-			-webkit-transition: all .3s ease-in-out;
-			-moz-transition: all .3s ease-in-out;
-			-o-transition: all .3s ease-in-out;
-			transition: all .3s ease-in-out;
-		}
-
-		a:hover {
-			color: #dc692e;
-			background: #efefe9;
-		}
-	}
 }
+
+
+
+
+
 
