--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,15 +1,25 @@
-<div class="cart_title"><%#= t('.title') %></div>
+<div class="cart_title"></div>
 
-<table>
-  <%= render(cart.line_items) %>
-
-  <tr class="total_line">
-    <td colspan="2">Total</td>
-    <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
-  </tr>
-
+<table summary="This is your shopping cart">
+	<thead>
+		<tr>
+			<th scope="col">Quantity</th>
+			<th scope="col">Item</th>
+			<th scope="col">Price</th>
+		</tr>
+	</thead>
+  <tfoot>
+  	<tr class="total_line">
+      <td colspan="2">Cart Total</td>
+      <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
+    </tr>
+  </tfoot>
+  <tbody>
+  	<%= render(cart.line_items) %>
+  </tbody>
 </table>
-
-<%= button_to "Checkout", new_order_path, method: :get %>
-<%= button_to "Empty cart", cart, method: :delete, data: { confirm: 'Are you sure?' }
+<div>
+	<%= button_to "Checkout", new_order_path, method: :get %>
+	<%= button_to "Empty cart", cart, method: :delete, data: { confirm: 'Are you sure?' }
      %>
+</div>
