homepage and layout marked up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,5 +47,11 @@
   </body>
   <footer>
     <p>&copy; Seo Cahill 2012.</p>
+    <ul>
+      <li> <a href="#">Legal Stuff</a>  </li>
+      <li> <a href="#">Help</a>  </li>
+      <li> <a href="#">About</a>  </li>
+      <li> <a href="#">Contact</a>  </li>
+    </ul>
   </footer>
 </html>
