--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,14 @@
-	
+	<section id="scrollspy">
+		<nav id="secondary">
+			<ul>
+				<li>Play</li>
+				<li>Promote</li>
+				<li>Attend</li>
+				<li>Cart (0)</li>
+			</ul>	
+		</nav>
+	</section>
+
 	<aside id="cart">
 		<header>
 			<h3>Your Cart</h3>
@@ -8,7 +18,7 @@
 
 	<section id = "latest-events">
 		<header>
-			<h3>Latest Events</h3>
+			<h3>Latest Shows</h3>
 		</header>
 		<div id="events">
 			<table summary="This is a listing of the latest events">
@@ -43,7 +53,7 @@
 
 	<section id="top-promoters">
 		<header>
-			<h3>Top Promoters</h3>
+			<h3>Best Promoters</h3>
 		</header>
 			<table summary="Listing of top rated promoters">
 				<thead>
