--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <li><%= link_to "Admin", admin_root_path %></li><br>
       <% end %>
       <li><%= link_to "Events", events_path %></li>
-      <li><%= link_to "Users", admin_users_path %></li>
+      <li><%= link_to "Users", users_path %></li>
     </ul>
   </nav>
   <body>
