--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -47,7 +47,7 @@
 					</tr>
 					<tr>
 						<td colspan="3">
-							<%= link_to "Promoter Profile", admin_user_path(user), class: "linky-hover" %>
+							<%= link_to "Promoter Profile", user_path(user), class: "linky-hover" %>
 						</td>
 					</tr>
 					<% end %>
