promoter profile marked up

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,35 @@
-This is your profile
+<header>
+	<h2>Promoter Profile Page</h2>
+</header>
+	
+<section id="promoter-headline">
+<header>
+	<h2>Info Box</h2>
+	<h3>Vanvcouver, Canada</h3>
+	<h1> rating chart goes here </h1>
+</header>
+<div>
+	<img src="http://placehold.it/100x100">
+	<p>Jimmy K</p>
+</div>
+<button> <%= button_to "Contact" %> </button>
+</section>
+
+<section id="promoter-stats">
+	<h2>Stats</h2>
+	<ul>
+		<li>Followers: 22</li>
+		<li>Average Attendance: 109</li>
+		<li>Average Price: $11 </li>
+		<li>Successful shows: 12 </li>
+		<li>Satisfaction: 87% </li>
+	</ul>
+</section>
+
+<section id="promoter-info">
+	<article>About me</article>
+	<article>MyCrowd</article>
+	<article>Venue info</article>
+	<article>Transport</article>
+	<article>Accomodation</article>
+</section>
