--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,59 @@
-<h1> <% title(@event.artist, "Events") %></h1>
-<p><%= @event.artist %></p>
-<p>Venue - <%= @event.venue %></p>
-<p>Date - <%= @event.date %></p>
+<header>
+	<% title(@event.artist, "Events") %>
+	<h2>Show Info</h2>
+</header>
 
-<% admins_only do %>
-<p><%= link_to "Edit Event", edit_event_path(@event) %></p>
-<p><%= link_to "Delete Event", @event, :method => :delete,
-:confirm => "Are you sure you want to delete this event?" %></p>
-<% end %>
+<section id="event-info">
+	<ul>
+		<li><%= @event.artist %></li>
+		<li><%= @event.venue %></li>
+		<li>Days left<%= @event.date %></li>
+		<li><%= @event.doors %></li>
+		<li><%= @event.ticket_price %></li>
+		<li>Tickets sold: 35/100</li>
+	</ul>
+	<aside>
+		<form>
+			Tickets<input type="number" value="abc">
+			<button>Add to Cart</button>
+		</form>
+	</aside>	
+</section>
+<br>
+<section id="promoters-textarea">
+	<header>
+		<h3>A Word from your Promoter</h3>
+	</header>
+	<aside>
+		<img src="http://placehold.it/50x50"><h5>Massimo Dutti, Milano.</h5> 
+		<p>I run a radio station called Reset Radio</p>
+		<button>Full Profile</button>
+	</aside>
+
+	<article>
+		<p>I talk about the band here with embedded stuff to help inform 
+			like soundcloud clips and videos</p>
+			<img src="http://placehold.it/450x300">
+			<p>I also have to mention other details like support etc</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> <br>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</article>
+</section>
+
+<section>
+	<% admins_only do %>
+	<p><%= link_to "Edit Event", edit_event_path(@event) %></p>
+	<p><%= link_to "Delete Event", @event, :method => :delete,
+	:confirm => "Are you sure you want to delete this event?" %></p>
+	<% end %>
+</section>
