--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <table summary="This is a tabel of the details of the order">
 	<thead>
 		<tr>
@@ -27,4 +28,4 @@
 		<% end %>
 	</tbody>
 </table>
-
+</div>
