--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,77 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Racing+Sans+One);
+@import "bootstrap";
+@import url(//fonts.googleapis.com/css?family=Racing+Sans+One);
 
-/*seems to no work with rails helpers
- but does with ordinary markup*/
-	a:hover	{
-		-webkit-transform: scale(1.5);
-		-moz-transform: scale(1.5);
-		transform: scale(1.5);
-}
 
-#stroke	{
-	float: left;
-	width: 250px;
-	height: 52px;
-	background: image-url('CB-stroke.png') no-repeat;
-	opacity: .65;
-}
-
-#stroke:hover	{
-	opacity: 1;
-}
-
-#tagline {
-	text-align: center;
-}
-
-#logo	{
-	float: right;
-	width: 250px;
-	height: 52px;
-	background: image-url('logo-cart.png') no-repeat;
-}
-
-#main {
-	margin-bottom: 20px;
-	width: 100%;
-	height: 60px;
-	font: 20px "Racing Sans One", Verdana;
-	text-align: center;
-}
-
-#primary	{
-	width: 100%;
-	height: 50px;
-	background-color: #fafaf6;
-	margin: 15px;
-	padding: 15px;
-	-webkit-box-shadow: 0px 1px 2px #ccc;
-	-moz-box-shadow: 0px 1px 2px #ccc;
-	box-shadow: 0px 1px 2px #ccc;
-	font: bold 13px "Racing Sans One", Verdana;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-
-	ul li {
-		display: inline;
-		padding-left: 43px;
-
-		a {
-			color: #64645d;
-			padding: 5px 15px;
-			text-shadow: 1px 1px 1px #fff;
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			border-radius: 5px;
-			-webkit-transition: all .3s ease-in-out;
-			-moz-transition: all .3s ease-in-out;
-			-o-transition: all .3s ease-in-out;
-			transition: all .3s ease-in-out;
-		}
-
-		a:hover {
-			color: #dc692e;
-			background: #efefe9;
-		}
-	}
-}
