--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,6 +84,7 @@
 
     <% flash.each do |key, value| %>
     	<div class="alert alert-<%= key == :notice ? "success" : "error" %>">
+        <a class="close" href="#">&times;</a>
     		<%= value %>
     	</div>
     <% end %>
